body shift and false overlay popup fixes

--- a/src/sass/components/main/_gallery-list.scss
+++ b/src/sass/components/main/_gallery-list.scss
@@ -4,6 +4,7 @@
   white-space: nowrap;
   overflow-x: auto;
   cursor: grab;
+  border-radius: 5px;
   box-shadow: 2px 8px 12px rgba(0, 0, 0, 0.16), 0px 8px 8px rgba(0, 0, 0, 0.06),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   &::-webkit-scrollbar {
