--- a/src/sass/components/nav/_nav-slider.scss
+++ b/src/sass/components/nav/_nav-slider.scss
@@ -17,6 +17,7 @@
   }
   .nav-list {
     padding: 15px 10px 15px 10px;
+    border-radius: 5px;
     background-color: rgb(247, 247, 211);
   }
   .nav-list > li {
